--- a/opentutorials/package.json
+++ b/opentutorials/package.json
@@ -12,6 +12,8 @@
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
+    "express-mysql-session": "^1.2.3",
+    "express-session": "^1.15.6",
     "jade": "^1.11.0",
     "multer": "^1.3.0",
     "node-mysql": "^0.4.2",
